# qbot

./: .gitignore  .gitmodules  .rgignore  CLAUDE.md  CMakeLists.txt  Makefile  NOTES  README.md  debug_run.sh  environment.yml  leopard  perf.data.old
.openhands/microagents/: repo.md
Quoridor-Online/quoridor/client/: __main__.py  bot_integration.py
Quoridor-Online/quoridor/client/src/: wall.py  window.py
gui/: SAMPLES_VIEWER.md  colors.py  coord.py  main.py  pathfinder.py  player.py  protocol.py  requirements.txt  samples_viewer.py  test_client.py  wall.py  widgets.py  window.py
model/: StateNode.py  resnet.py
old_src/: Global.h  README.md  Tree.h  inference.cpp  leopard.cpp  utility.cpp  utility.h
scripts/: validate_all_samples.py
src/: Astar.cpp  Game.cpp  Game.h  GameParallel.cpp  Global.h  QuoridorMain.cpp  Tree.cpp  Tree.h  inference.cpp  inference.h  leopard.cpp  pathfinding.cpp  pathfinding.h  stlastar.h  storage.cpp  storage.h  utility.cpp  utility.h  visualization.py
src/core/: Game.cpp  Game.h  QuoridorMain.cpp
src/inference/: inference.cpp  inference.h  inference_server.cpp  inference_server.h
src/search/: mcts.cpp  mcts.h
src/tree/: Node.h  StateNode.cpp  StateNode.h  node_pool.h
src/util/: gui_client.cpp  gui_client.h  leopard.cpp  pathfinding.cpp  pathfinding.h  storage.cpp  storage.h  timer.h  training_samples.cpp  training_samples.h  validate_samples.cpp
tests/: bench_inference.cpp  benchmarks.cpp  test_game.cpp  test_inference.cpp  test_storage.cpp
train/: StateNode.py  bench_precision.py  convert_qsamples.py  faceoff.py  model_utils.py  resnet.py  train_loop.py
